--- a/main.html
+++ b/main.html
@@ -1,109 +1,116 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
     </head>
 <body>
-    <div class="top">
-        <h1 class="sticky">
-            Menu
-        </h1>
-        <h2>
-            Good Morning!
-        </h2>
+    <div class="main">
+        <div class="top">
+            <h1 class="sticky">
+                Menu
+            </h1>
+            <h2>
+                Good Morning!
+            </h2>
+        </div>
+
+        <div class="scrollOptions">
+            <div class="options">
+                <img src="img/coffee-cup.png">
+                <p>Hot Drinks</p>
+            </div>
+            <div class="options">
+                <img src="img/cup.png">
+                <p>Cold Drinks</p>
+            </div>
+            <div class="options">
+                <img src="img/sandwich.png">
+                <p>Food</p>
+            </div>
+        </div>
+
+        <h2>Hot Drinks</h2>
+        <div class="DrinkScroll">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/312418/pexels-photo-312418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Hot Coffee</b> <br>&nbspPrice: 4.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/2648988/pexels-photo-2648988.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Cafe Latte</b> <br>Price: 4.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/2318005/pexels-photo-2318005.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Mocha</b> <br> Price: 4.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+        </div>
+
+        <h2>Cold Drinks</h2>
+        <div class="DrinkScroll">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/7937416/pexels-photo-7937416.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Americano</b> <br>Price: 3.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/8755972/pexels-photo-8755972.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Malt Brew</b> <br>Price: 3.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/5947116/pexels-photo-5947116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Cold Brew</b> <br> Price: 3.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+        </div>
+
+        <h2>Food</h2>
+        <div class="DrinkScroll">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/6608664/pexels-photo-6608664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Sandwich</b> <br>&nbspPrice: 8.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/4109510/pexels-photo-4109510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Avocado Toast</b> <br>Price: 6.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/4963921/pexels-photo-4963921.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="label">
+                    <p><b>Jam Toast</b> <br> Price: 5.90</p>
+                    <button> + </button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <div class="navbar">
+        <a class="active" href="#"><i class="fa fa-fw fa-home"></i></a>
+        <a href="#"><i class="fa fa-fw fa-shopping-bag"></i></a>
+        <a href="#"><i class="fa fa-fw fa-heart"></i></a>
+        <a href="#"><i class="fa fa-fw fa-search"></i></a>
+        <a href="#"><i class="fa fa-fw fa-user"></i></a>
     </div>
-
-    <div class="scrollOptions">
-        <div class="options">
-            <img src="img/coffee-cup.png">
-            <p>Hot Drinks</p>
-        </div>
-        <div class="options">
-            <img src="img/cup.png">
-            <p>Cold Drinks</p>
-        </div>
-        <div class="options">
-            <img src="img/sandwich.png">
-            <p>Food</p>
-        </div>
-    </div>
-
-    <h2>Hot Drinks</h2>
-    <div class="DrinkScroll">
-        <div class="card">
-            <img src="img/HotDrinks/hotCoffee.jpg">
-            <div class="label">
-                <p><b>Hot Coffee</b> <br>&nbspPrice: 4.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/HotDrinks/CafeLatte.jpg">
-            <div class="label">
-                <p><b>Cafe Latte</b> <br>Price: 4.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/HotDrinks/Mocha.jpg">
-            <div class="label">
-                <p><b>Mocha</b> <br> Price: 4.90</p>
-                <button> + </button>
-            </div>
-        </div>
-    </div>
-
-    <h2>Cold Drinks</h2>
-    <div class="DrinkScroll">
-        <div class="card">
-            <img src="img/ColdDrinks/americano.jpg">
-            <div class="label">
-                <p><b>Americano</b> <br>Price: 3.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/ColdDrinks/maltBrew.jpg">
-            <div class="label">
-                <p><b>Malt Brew</b> <br>Price: 3.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/ColdDrinks/coldBrew.jpg">
-            <div class="label">
-                <p><b>Cold Brew</b> <br> Price: 3.90</p>
-                <button> + </button>
-            </div>
-        </div>
-    </div>
-
-    <h2>Food</h2>
-    <div class="DrinkScroll">
-        <div class="card">
-            <img src="img/Food/sandwich.jpg">
-            <div class="label">
-                <p><b>Sandwich</b> <br>&nbspPrice: 8.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/Food/toast.jpg">
-            <div class="label">
-                <p><b>Avocado Toast</b> <br>Price: 6.90</p>
-                <button> + </button>
-            </div>
-        </div>
-        <div class="card">
-            <img src="img/Food/jamtoast.jpg">
-            <div class="label">
-                <p><b>Jam Toast</b> <br> Price: 5.90</p>
-                <button> + </button>
-            </div>
-        </div>
-    </div>
-
-
-
 </body>
 </html>
